--- a/formulario.html
+++ b/formulario.html
@@ -8,30 +8,30 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="Aron" content="Aron"><!-- Aqui vc pode colocar o autor da página e várias coisas -->
         <meta name="description" content="descrição do site">
-        <title>Emprego de CEO do Aron</title><!-- Aqui vc escolhe o nome da página -->
+        <title>Empregos de CEO do Aron</title><!-- Aqui vc escolhe o nome da página -->
         <link rel="stylesheet" href="style.scss">
       
 
     </head>
 
-<center><p>Formulário apenas figurativo</p>
+<center><p>Formulário figurativo</p>
 
-    <pre><h1 style="color: rgb(90, 240, 226)">Formulário Top do CEO Aron</h1></pre>
+    <pre><h1 style="color: cadetblue">Formulário feito por Aron</h1></pre>
         <form action="/arquivo_php_que_processa_dados">
         <pre><h2>Indentificação</h2></pre>
         <label for="nome">Nome completo:</label>
-        <input type="text" placeholder="Insira seu nome aqui" required id="nome"><br><br>
+        <input type="text" placeholder="Seu nome aqui" required id="nome"><br><br>
 
-        <label for="dataNascimento">Data do seu Nascimento: </label>
+        <label for="dataNascimento">Nascimento: </label>
         <input type="date" name="dataNascimento" id="dataNascimento"><br><br>
 
-        <label for="endereco">Endereço Casa:</label>
-        <input type="text" placeholder="Insira o endereço aqui" required id="endereco"><br><br>
+        <label for="endereco">Moradia:</label>
+        <input type="text" placeholder="Seu endereço aqui" required id="endereco"><br><br>
 
-        <label for="email">E-mail pessoal:</label>
-        <input type="email" name="email" placeholder="Insira o seu e-mail aqui" required id="email"><br><br>
+        <label for="email">E-mail:</label>
+        <input type="email" name="email" placeholder="Seu e-mail aqui" required id="email"><br><br>
 
-<pre><h2 style="color: rgb(90, 240, 226)">Turno de trabalho como CEO</h2></pre>
+<pre><h2 style="color: cadetblue">Turno de trabalho</h2></pre>
     <input type="checkbox" name="turnoManha" id="m">
     <label for="sexo">Manhã</label>
     <input type="checkbox" name="turnoTarde" id="t">
@@ -41,18 +41,16 @@
     <input type="checkbox" name="turnoMadrugs" id="ma">
     <label for="checkbox">Madruga</label><br>
 
-<pre><h2 style="color: rgb(90, 240, 226)">Gênero</h2></pre>
+<pre><h2 style="color: cadetblue">Gênero</h2></pre>
     <input type="checkbox" name="gen" id="masculino" value="masculino">
     <label for="sexo">Masculino</label>
     <input type="checkbox" name="gen" id="feminino" value="feminino">
-    <label for="sexo">Feminino</label>
-    <input type="checkbox" name="gen" id="ligia" value="ligia">
-    <label for="sexo">Ligia Lover</label><br>
+    <label for="sexo">Feminino</label><br>
 
 <hr>
 <pre>
-    <h1 style="color: rgb(90, 240, 226)">Para voltar ao formulário clique abaixo</h1>
-    <h1><a href="index.html">Clique Aqui</a></h1>
+    <h1>Clique abaixo para voltar ao formulário</h1>
+    <h1><a class="index" href="index.html">Clique Aqui</a></h1>
         </center></pre>
 <!-- 
     feito por Aron 1 info b
