--- a/index-ja.html
+++ b/index-ja.html
@@ -73,7 +73,7 @@
         </main>
         <header>
             <h2><a class="form">フォームにアクセスするには、以下をクリックしてください</a></h2>
-            <h2><a class="form" href="forms.html">ここをクリック</a></h2>
+            <h2><a class="form" href="forms-ja.html">ここをクリック</a></h2>
         </header>
         <hr>
             <h2>言語/Idioma</h2>
