--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     Copyright&COPY;</li><li>
                     Euro &euro;</li><li>
                     &#128514 &#128187</li><li>
-                    Estou aprendendo <abbr title="Hyper text markup language">HTML</abbr></li>
+                    Estou aprendendo <abbr class="html" title="Hyper text markup language">HTML</abbr></li>
                 </ul>
             </nav>
         </div>
