--- a/forms-en.html
+++ b/forms-en.html
@@ -8,30 +8,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Aron">
     <meta name="description" content="descrição do site">
-    <title>Work of CEO on Aron's Site</title>
+    <title>Aron's CEO job</title>
     <link rel="stylesheet" href="style.scss">
   
 
 </head>
 
-<center><p>Only Figurative Form</p>
+<center><p>Figurative Form</p>
 
-<pre><h1 style="color: rgb(90, 240, 226)">Great form made by Aron</h1></pre>
+<pre><h1 style="color: cadetblue">Form created by Aron</h1></pre>
     <form action="/arquivo_php_que_processa_dados">
-    <pre><h2>Indentify</h2></pre>
+    <pre><h2>Indentity</h2></pre>
     <label for="nome">Full Name:</label>
-    <input type="text" placeholder="Insert your name here" required id="nome"><br><br>
+    <input type="text" placeholder="Your name here" required id="nome"><br><br>
 
-    <label for="dataNascimento">Birthday Date: </label>
+    <label for="dataNascimento">Birthday: </label>
     <input type="date" name="dataNascimento" id="dataNascimento"><br><br>
 
     <label for="endereco">Home Address:</label>
-    <input type="text" placeholder="Insert your address here" required id="endereco"><br><br>
+    <input type="text" placeholder="Your address here" required id="endereco"><br><br>
 
-    <label for="email">Personal E-mail:</label>
-    <input type="email" name="email" placeholder="Insira o seu e-mail aqui" required id="email"><br><br>
+    <label for="email">E-mail:</label>
+    <input type="email" name="email" placeholder="Your E-mail here" required id="email"><br><br>
 
-<pre><h2 style="color: rgb(90, 240, 226)">What part of the day r u going to work</h2></pre>
+<pre><h2 style="color: cadetblue">Work Shift</h2></pre>
 <input type="checkbox" name="turnoManha" id="m">
 <label for="sexo">Morning</label>
 <input type="checkbox" name="turnoTarde" id="t">
@@ -41,18 +41,16 @@
 <input type="checkbox" name="turnoMadrugs" id="ma">
 <label for="checkbox">Dawn</label><br>
 
-<pre><h2 style="color: rgb(90, 240, 226)">Sex</h2></pre>
+<pre><h2 style="color: cadetblue">Sex</h2></pre>
 <input type="checkbox" name="gen" id="masculino" value="masculino">
 <label for="sexo">Male</label>
 <input type="checkbox" name="gen" id="feminino" value="feminino">
-<label for="sexo">Female</label>
-<input type="checkbox" name="gen" id="ligia" value="ligia">
-<label for="sexo">Ligia Lover</label><br>
+<label for="sexo">Female</label><br>
 
 <hr>
 <pre>
-<h1 style="color: rgb(90, 240, 226)">To return to the form click below</h1>
-<h1><a href="index.html">Click here</a></h1>
+<h1>To return to the form click below</h1>
+<h1><a class="index" href="index-en.html">Click here</a></h1>
     </center></pre>
 <!-- 
 feito por Aron 1 info b
