--- a/formulario.html
+++ b/formulario.html
@@ -50,7 +50,7 @@
 <hr>
 <pre>
     <h1>Clique abaixo para voltar ao formulário</h1>
-    <h1><a class="index" href="index.html">Clique Aqui</a></h1>
+    <h1><a class="index1" href="index.html">Clique Aqui</a></h1>
         </center></pre>
 <!-- 
     feito por Aron 1 info b
