--- a/index-en.html
+++ b/index-en.html
@@ -79,15 +79,15 @@
             <h2>Language/Idioma</h2>
         <footer>
             
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 <img src="brasil.png" alt="">
                 <p>Português (BR)</p>
             </a>
-            <a href="index-en.html" target="_blank">
+            <a href="index-en.html">
                 <img src="eua.png" alt="">
                 <p>English</p>
             </a>
-            <a href="index-ja.html" target="_blank">
+            <a href="index-ja.html">
                 <img src="japao.png" alt="">
                 <p>日本</p>
             </a>
